[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "=1.7.11"
thiserror = "1.0.23"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"
solana-validator = "=1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
